--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,16 @@
     <string name="register_invalid_phone">Số điện thoại bạn nhập không tồn tại</string>
     <!-- End   Sign up-->
 
-    <!--    Map-->
+    <!--    Map - Create stop point-->
     <string name="map_my_location">Vị trí của tôi</string>
     <string name="map_failed_to_get_device_location">Không thể xác định vị trí. Hãy chắn chắn GPS đã được bật</string>
+    <string name="stop_point_empty_name">Bạn chưa nhập tên điểm dừng</string>
+    <string name="stop_point_empty_address">Bạn chưa nhập địa chỉ</string>
+    <string name="stop_point_empty_service_type">Bạn chưa chọn loại phục vụ</string>
+    <string name="stop_point_empty_province">Bạn chưa chọn tỉnh /thành phố</string>
+    <string name="stop_point_empty_arrive_time">Bạn chưa nhập thời gian tới</string>
+    <string name="stop_point_empty_arrive_date">Bạn chưa nhập ngày tới</string>
+    <string name="stop_point_empty_leave_time">Bạn chưa nhập thời gian tới</string>
+    <string name="stop_point_empty_leave_date">Bạn chưa nhập ngày đi</string>
+    <string name="stop_point_select_time">Chọn thời gian</string>
 </resources>
