--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,5 +57,6 @@
     <string name="stop_point_empty_leave_time">Bạn chưa nhập thời gian tới</string>
     <string name="stop_point_empty_leave_date">Bạn chưa nhập ngày đi</string>
     <string name="stop_point_select_time">Chọn thời gian</string>
-    <string name="stop_point_add_successfully">Đã thêm điểm dừng</string>
+    <string name="stop_point_add_successfully">Đã cập nhật điểm dừng</string>
+    <string name="no_stop_point_selected">Bạn chưa thêm điểm dừng nào</string>
 </resources>
