--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,14 @@
     <string name="stop_point_add_successfully">Đã cập nhật điểm dừng</string>
     <string name="no_stop_point_selected">Bạn chưa thêm điểm dừng nào</string>
 
+    <!--    Tour info-->
+    <string name="title_activity_tour_info">TourInfoActivity</string>
+    <string name="title_bar_tour_info">Thông tin chuyến đi</string>
+    <string name="tour_not_exists">Không tồn tại chuyến đi này</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
