--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,7 +67,8 @@
     <string name="title_bar_tour_info">Thông tin chuyến đi</string>
     <string name="tour_not_exists">Không tồn tại chuyến đi này</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="host">Chủ xị</string>
+    <string name="invite_success">Đã mời </string>
 
 </resources>
