--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="stop_point_select_time">Chọn thời gian</string>
     <string name="stop_point_add_successfully">Đã cập nhật điểm dừng</string>
     <string name="no_stop_point_selected">Bạn chưa thêm điểm dừng nào</string>
+    <string name="updated_stop_point_info">Thông tin điểm dừng đã được cập nhật</string>
 
     <!--    Tour info-->
     <string name="title_activity_tour_info">TourInfoActivity</string>
@@ -70,5 +71,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="host">Chủ xị</string>
     <string name="invite_success">Đã mời </string>
+    <string name="edt_hint_search_member">Tìm kiếm thành viên bằng tên tài khoản, email, số điện  thoại</string>
+    <string name="member_existed">Tài khoản này đã tham gia chuyến đi</string>
 
 </resources>
