--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,10 @@
     <string name="title_activity_tour_info">TourInfoActivity</string>
     <string name="title_bar_tour_info">Thông tin chuyến đi</string>
     <string name="tour_not_exists">Không tồn tại chuyến đi này</string>
+    <string name="tour_open">Đang mở</string>
+    <string name="tour_started">Đã bắt đầu</string>
+    <string name="tour_cancled">Đã hủy</string>
+    <string name="tour_closed">Đã kết thúc</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="host">Chủ xị</string>
