dialog create, send notificaiton (ok)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,4 +110,8 @@
 
     <!--    Notification-->
     <string name="invite_title">Lời mời tham gia chuyến đi</string>
+
+    <!--    Tour Direction-->
+    <string name="notify_successfully">Đã gửi thông báo</string>
+    <string name="invalid_notification">Thông báo không hợp lệ</string>
 </resources>
