+ draw flight path to stop point, service get member coordinate

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,4 +115,5 @@
     <string name="notify_successfully">Đã gửi thông báo</string>
     <string name="invalid_notification">Thông báo không hợp lệ</string>
     <string name="empty_warning_speed">Chưa chọn giới hạn tốc độ</string>
+    <string name="receiver_action_send_coordinate">receiver.action.sendCoordinate</string>
 </resources>
