+send record, fix update stop point and ...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="title_activity_home">HomeActivity</string>
     <string name="title_home">Trang chủ</string>
     <string name="title_explore">Điểm dừng</string>
-    <string name="title_map">Bản đồ</string>
+    <string name="title_map">Theo dõi chuyến đi</string>
     <string name="title_notifications">Lời mời</string>
     <string name="title_user_settings">Tài khoản của bạn</string>
     <string name="title_user_trip">Chuyến đi cá nhân</string>
